assets/css/main.css
/* ... */
header .fa-times{
    -webkit-transform: rotate(180deg);
             transform: rotate(180deg);
}

header #menu-btn:hover{
    color: var(--primaryLight);
}

body.dark-mode header #menu-btn:hover {
    color: var(--secondaryDark);
}

/*--------------------- 3- Header Area CSS (End) ---------------------*/

/*--------------------- Dark - Light mode (Start) ---------------------*/
.toggle {
    background-color: var(--backgroundLight);
    width: 35px;
    height: 35px;
    border-radius: 50%;
    display: grid;
    place-items: center;
    cursor: pointer;
    box-shadow: 0 0 50px 20px rgba(0, 0, 0, .1);
    line-height: 1;
}

.input {
    display: none;
}

.icon {
    grid-column: 1 / 1;
    grid-row: 1 / 1;
    transition: transform 500ms;
}

.icon--moon {
    transition-delay: 200ms;
}

.icon--sun {
    transform: scale(0);
}

#switch:checked + .icon--moon {
    transform: rotate(360deg) scale(0);
}

#switch:checked ~ .icon--sun {
    transition-delay: 200ms;
    transform: scale(1) rotate(360deg);
}
/*--------------------- Dark - Light mode (Start) ---------------------*/

/*--------------------- SideBar Area (Start) ---------------------*/
#sidebar {
    position: fixed;
    left: 0;
    width: 70px;
    height: 100vh;
    background-color: transparent;
    padding: 50px 0;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    font-size: 1.7rem;
    transition: all 0.3s ease-in-out;
}

.follow-me {
    writing-mode: vertical-rl;
    margin-bottom: 20px;
    display: flex;
    align-items: center;
    color: var(--textLight);
    font-size: 1.5rem;
}

.follow-me p {
    margin: 0;
    font-size: 2rem;
}

body.dark-mode .follow-me p {
    color: var(--textDark);
}

.separator {
    display: flex;
    height: 7.5rem;
    background-color: var(--textLight);
    margin: 30px 10px 10px 10px;
    align-items: flex-start;
}

#sidebar a {
    text-decoration: none;
    margin-bottom: 15px;
    transition: transform 0.3s ease;
}

#sidebar i {
    color: var(--textLight);
    font-size: 2rem;
}

body.dark-mode #sidebar i {
    color: var(--textDark);
}

#sidebar a:hover i {
    color: var(--primaryLight);
    transform: scale(1.2);
}
/*--------------------- SideBar Area (End) ---------------------*/

.cursor{
    height: 50px;
    width: 50px;
    background: transparent;
    border-radius: 50%;
    pointer-events: none;
    border: 1px solid var(--primaryDark);
    position: fixed;
    z-index: 10;
    top: -25px;
    left: -25px;
    opacity:1;
    overflow: hidden;
    font-family: brook;
    text-align: center;
    color:var(--textLight);
    font-size: 16px;
}
.cursor-two{
    height: 8px;
    width: 8px;
    background: var(--acentDark);
    border-radius: 50%;
    pointer-events: none;
    position: fixed;
    z-index: 10;
    opacity:1;
    top: -4px;
    left: -4px;
    transition: all .05s ease;
}

#particles{
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    width: 100vw;
    background-size: cover;
    background-position: 50% 50%;
    display: block;
    z-index: -1;
}

/*--------------------- 4- Home Area CSS (Start) ---------------------*/
.home{
    padding: 0rem 5%;
    min-height: 100vh;
}

.home .box-container{
    min-height: 100vh;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
    gap: 4rem;
}

.home. image{
    text-align: center;
    -webkit-box-flex: 1;
        -ms-flex: 1 1 40rem;
            flex:  1 1 40rem;
}

.home .image img{
    border-radius: 70% 70% 70% 70% / 30% 30% 70% 70% ;
    object-fit: cover;
    position: absolute;
    height: 450px;
    width: 450px;
    background-size: cover;
    margin: 4.5rem;
}

.home .content{
    -webkit-box-flex: 1;
    -ms-flex: 1 1 40rem;
        flex: 1 1 40rem;

    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;

    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;

    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;

    margin-top: 7rem;
}

.home .content h2{
    font-size: 2.5rem;
    font-weight: 400;
    color: var(--textLight);
}

.home .content h1{
    font-size: 4rem;
    color: var(--textLight);
    padding: 1rem 0;
    text-transform: none;
}

body.dark-mode .home .content h1 {
    color: var(--textDark);
}

body.dark-mode .home .content h2 {
    color: var(--textDark);
}

.home .content h1 span{
    color: var(--acentLight);
}

body.dark-mode .home .content h1 span {
    color: var(--acentDark);
}

.home .content p{
    font-size: 1.8rem;
    font-weight: 400;
    color: var(--textLight);
    padding-bottom: 2rem;
    line-height: 1.5;
}

body.dark-mode .home .content p {
    color: var(--textDark);
}

/*---------------  CIRCLE ANIMATION (START)  ---------------*/
.animation-circle{
    position: relative;
}

.profile{
    top: 100px;
    height: 550px;
    width: 550px;
    background-size: cover;
}

.circle {
    position: relative;
    top: 350px;
    left: 220px;
    width: 100px;
    height: 100px;
    transform-style: preserve-3d;
    animation: animationCircle 40s linear infinite;
}

.background-circle{
    background: var(--opacitySLight);
    border-radius: 50%;
    width: 450px;
    height: 450px;
    z-index: 9;
    box-shadow: 0 0 20px var(--textLight);
    margin-left: 4.5rem;
    margin-top: -4rem;
}

body.dark-mode .background-circle {
    background: var(--opacitySDark);
    box-shadow: 0 0 20px var(--acentDark);
}
/* ... */

